# flask-cockroachdb-devcontainer

./: .gitignore  Dockerfile.dev  Dockerfile.prod  LICENSE  NOTICE  client-secure.yaml  compose-roachless.override.yml  compose-roachless.yml  create-db-admin.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  drop-roach.yml  modules.garden.yml  project.garden.yml  pyproject.toml  requirements.txt  up.dev.sh  up.kube.sh  up.prod.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateContainer.sh
flask-app/: Chart.yaml  values.yaml
flask-app/templates/: web-deployment.yaml  web-service.yaml
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
nginx/: nginx.conf
pulumi/: __main__.py
terraform/: main.tf  network.tf  outputs.tf  variables.tf  versions.tf
web/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh  manage.py  requirements.txt
web/project/: __init__.py
web/tests/: test_app.py
