[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black<23.0.0,>=22.8.0",
    "setuptools>=65.6.3",
    "pytest>=7.2.0",
    "pulumi>=3.50.2",
    "pulumi-gcp>=6.45.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
name = "flask-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Tao Hansen",email = "59834693+worldofgeese@users.noreply.github.com"},
]
dependencies = ["requests<3.0.0,>=2.28.1", "Flask<3.0.0,>=2.2.2", "gunicorn<21.0.0,>=20.1.0", "psycopg2-binary<3.0.0,>=2.9.3", "Flask-SQLAlchemy<3.0.0,>=2.5.1", "sqlalchemy-cockroachdb<2.0.0,>=1.4.3"]
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}

[project.optional-dependencies]
