[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black<23.0.0,>=22.8.0",
    "setuptools>=65.6.3",
    "pytest>=7.2.0",
    "pulumi>=3.50.2",
    "pulumi-gcp>=6.45.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Tao Hansen", email = "59834693+worldofgeese@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.11"
license = {text = "MIT"}
